libofx (1:0.9.4) unstable; urgency=low

  * New upstream release
  * Remove obsolete debian patches
  * Change libxml dependency to libxml++2.6-dev (Closes: #467364)
  * Add new help2man dependency
  * Add ${misc:Depends} entries to binary dependencies
  * Add debian/watch file

 -- Bryan Donlan <bdonlan@gmail.com>  Mon, 02 May 2011 17:58:58 -0400

libofx (1:0.9.0-3) unstable; urgency=low

  * lib/ofx_preproc.c (ofx_proc_file): Make iconv buffer twice as big in
    case input files include non-ASCII UTF-8 characters.  Patch thanks to
    Jerome Vouillon (jerome.Vouillon@pps.jussieu.fr).  (Closes: 493597)
  
  * Acknowledge NMU from Andreas Barth. (Thanks Andreas!) (Closes: #417361)
  * Acknowledge NMU from Chris Lamb. (Thanks Chris!) (Closes: #474860)

 -- Thomas Bushnell, BSG <tb@debian.org>  Mon, 04 Aug 2008 23:16:30 -0700

libofx (1:0.9.0-2.2) unstable; urgency=medium

  * Non-maintainer upload.
  * Fix FTBFS with GCC 4.3 (Closes: #474860)
  * debian/control:
    - Bump Standards-Version to 3.7.3.
    - Use ${binary:Version} instead of ${Source-Version}.
  * Call distclean in debian/rules clean target.

 -- Chris Lamb <chris@chris-lamb.co.uk>  Sat, 12 Apr 2008 14:44:55 +0100

libofx (1:0.9.0-2.1) unstable; urgency=medium

  * Non-maintainer upload.
  * Fix FTBFS with gcc-4.3. Thanks to Martin Michlmayr. Closes: #417361

 -- Andreas Barth <aba@not.so.argh.org>  Sun, 16 Mar 2008 22:48:14 +0000

libofx (1:0.9.0-2) unstable; urgency=low

  * debian/control (libofx4): Don't Conflict, Provide, or Replace
    the libofx2 packages.  That job is for the old libofx3 only.
    (Closes: #463854)

 -- Thomas Bushnell, BSG <tb@debian.org>  Mon, 04 Feb 2008 19:35:39 -0500

libofx (1:0.9.0-1) unstable; urgency=low

  * New upstream release.
  * Regenerate autotools using Debian libtool by:
    libtoolize --copy --force; aclocal-1.9; autoconf.
  * debian/control (libofx4): Renamed package from libofx3.
    (libofx-dev): Depend on libofx4 instead of libofx3.